--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "ethers": "^6.14.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "viem": "^2.31.3",
     "wagmi": "^2.15.6"
